admin/client/src/styles/legacy/_style.scss
/* ... */
.cms-content-loading-spinner {
	position: absolute; // z-index doesn't apply properly without that
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 9999;
	background: url(../images/spinner.gif) no-repeat 50% 50%;
}

/** -----------------------------------------------
 * Loading Screen
 * ------------------------------------------------ */
.ss-loading-screen {
	width: 100%;
	height: 100%;
	overflow: hidden;
	position: absolute;
	z-index: 100000;
	// TODO Convert to compass gradient include
	background: #fff;
	background: -moz-radial-gradient(50% 50% 180deg, circle cover, #FFFFFF, #EFEFEF, #C7C7C7 100%);
	background: -webkit-gradient(radial, 50% 50%, 350, 50% 50%, 0, from(#E3E3E3), to(white));

	.loading-logo {
		width: 100%;
		height: 100%;
		overflow: hidden;
		position: absolute;
		background: transparent url(../images/silverstripe_logo.png) no-repeat 50% 50%;
	}

	p {
		width: 100%;
		text-align: center;
		position: absolute;
		bottom: 80px;
		z-index: 100001;

		span.notice {
			width: 300px;
			font-size: 14px;
			padding: 10px 20px;
			color: #dc7f00;
			border: none;
			background: none;
			border-radius: 5px;
			display: inline-block;
			zoom: 1;
      		*display: inline;
		}
	}

	.loading-animation {
		display: none;
		position: absolute;
		left: 50%;
		margin-left: -21.5px; // Half of spinner size
		top: 80%;
	}
}

/** --------------------------------------------
 * Actions
 * -------------------------------------------- */

.cms-content-actions, .cms-preview-controls {
	margin: 0;
	z-index: 999;
	border-top: 1px solid $border-color;
	height: $toolbar-total-height;
	min-height: $toolbar-total-height;
	max-height: $toolbar-total-height;
	background-color: $tab-panel-texture-color;

	&.south .Actions {
		height: $toolbar-height;
		padding: $grid-y+2 $grid-x*2;
	}
}


/** --------------------------------------------
 * Messages
 * -------------------------------------------- */

.message {												// White
	display: block;
	clear: both;
	margin: 0 0 $grid-y;
	padding: $grid-y + $grid-x/4 $grid-x + $grid-x/2;
	font-weight: normal;
	border: 1px #ccc solid;
	background: #fff;									// for browsers that don't understand rgba
	background: rgba(#fff,0.5);
	text-shadow: none;
	border-radius: 3px;

	&.notice {
		background-color: lighten($color-notice,22%);	// Blue
		border-color: $color-notice;
	}
	&.warning {											// Yellow
		background-color: lighten($color-warning,47%);
		border-color: $color-warning;
	}
	&.error, &.bad, &.required, &.validation {			// Red
		background-color: lighten($color-error,24%);
		border-color: $color-error;
	}
	&.good {											// Green
		background-color: lighten($color-good,40%);
		border-color: $color-good;
	}

	p {
		margin: 0;
	}
}


.cms-edit-form {
	.message {
		margin: $grid-x*2; // TODO Remove double padding when adjacent to a padded tabs panel
	}
	.ui-tabs-panel {
		.message {
			margin: $grid-x*2 0; // gets padding from tab panel
		}
	}
}


.notice-item {
	border-radius: 3px;
	font-family: inherit;
	font-size: inherit;
	padding: 6px 24px 8px 10px;
	word-wrap: break-word;
	min-height: 60px;
	height: auto;
	border: 0;
	border-left: 3px solid;
	color: #666;
	left: 300px;
	background: #fff;

	&.success,
	&.good,
	&.green {
		border-color: $color-good;
	}

	&.notice,
	&.info,
	&.blue {
		border-color: $color-notice;
	}

	&.warning,
	&.caution,
	&.yellow {
		border-color: $color-warning;
	}

	&.bad,
	&.error,
	&.red {
		border-color: $color-error;
	}

	p {
		margin-bottom: 0;
	}
}

.notice-item-close {
	font-size: 0; // hide the textNode "x" that jquery.notice.js inserts
	opacity: .8;

	&:hover {
		opacity: 1;
	}

	// apply relevant styles from .font-icon-cancel
	&::before {
		content: "\44";
		font-size: 15px;
		font-family: silverstripe, sans-serif;
		font-weight: normal;
		-webkit-font-smoothing: antialiased;
	}
}



/** --------------------------------------------
 * Page icons
 * -------------------------------------------- */

.page-icon, a .jstree-pageicon {
	display: block;
	width: 16px;
	height: 16px;
	background: transparent url(../images/sitetree_ss_pageclass_icons_default.png) no-repeat;
}

.page-icon {
	&.class-HomePage {
		background-position: 0 -48px;
	}
	&.class-RedirectorPage {
		background-position: 0 -16px;
	}
	&.class-VirtualPage {
		background-position: 0 -32px;
	}
	&.class-ErrorPage {
		background-position: 0 -112px;
	}
}

/** --------------------------------------------
 * "Add page" dialog
 * -------------------------------------------- */

.cms-page-add-form-dialog {

	display: none;
}

.cms-add-form {
	.step-label {
		opacity:0.9;
		.flyout {
			height: 26px; //centres number within the grey arrow
			padding-top:5px;
		}
		.title {
			padding-top:5px; //aligns label with point of arrow
			font-weight:bold; //to match pagetype label
			text-shadow: 1px 1px 0 $color-text-shadow;
		}
	}
	ul.SelectionGroup {
		padding-left:28px;
		overflow: visible;
		@include legacy-pie-clearfix;
	}
	.parent-mode {
		padding: $grid-x;
		overflow: auto;
	}
}
/* ... */

